--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+html { height: 100%; }
+body { margin: 2px; }
+h2 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.15em;
+
+    color: #000000;
+
+}
+
+hr {
+    border: 5px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
+}
