--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -4,9 +4,14 @@
 }
 table {
     width: 100%;
-    margin: 2px;
+    margin: 10px;
 
   }
+  .posit{
+margin-left: 5%;
+margin-right: 30%;
+padding-right: 0%;
+}
 td{
     
     font-family: Roboto;
