--- a/src/app/liste-details/liste-details.component.html
+++ b/src/app/liste-details/liste-details.component.html
@@ -1,16 +1,7 @@
-<!-- <div class="position-relative">
-    <div class="position-absolute top-0 start-0 rectangle">
-        
-        <p class="text-end">22</p>
-        <p class="text-end">Nombre Total de liste Tiré.</p>
-    </div>
-    <div class="position-absolute top-0 end-0 rectangle"></div>
-</div> -->
-
 
 <div class="container-fluid">
 
-    <h2 class="mt-4">Statistique</h2>
+    <h2 class="mt-4">LIBELE LISTE</h2>
     <hr>
 </div>
 
@@ -20,26 +11,26 @@
    
       <!-- Position Column -->
        <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> Libelle Liste </th>
-        <td mat-cell *matCellDef="let element" routerLink="/liste-details"> {{element.position}} </td>
+        <th mat-header-cell *matHeaderCellDef> Libelle Tirage </th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
       </ng-container> 
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre Total de Tirage par Liste </th>
+        <th mat-header-cell *matHeaderCellDef> Date du tirage </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container> 
   
       <!-- Weight Column -->
        <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <th mat-header-cell *matHeaderCellDef> Nombre de postulant tirer </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container> 
   
       <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let element" routerLink="/tirage-details"> {{element.symbol}} </td>
       </ng-container> 
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -51,4 +42,3 @@
                    aria-label="Select page of periodic elements">
     </mat-paginator>
   </div> 
-  
