creation et mise en jour de style dans certains composant (tirage, accueil)

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -100,8 +100,9 @@ nav {
         letter-spacing: 3px;
 
     }
-    .nav-link1{
-        padding-bottom: 50px !important;
+    
+    .accueil{
+        padding-bottom: 50px;
     }
     .nav-item {
         background-color: aliceblue;
