--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
 
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -31,9 +31,9 @@
 
              <div class=" navbar-nav ms-auto d-flex align-items-center">
                 <button type="button" class="btn accueil nav-item nav-item1">
-                    <a class="nav-link nav-link1 active" href="/accueil">Accueil</a>
+                    <a class="nav-link nav-link2 active" href="/accueil">Accueil</a>
                 </button>
-                <button type="button" class="btn tirage nav-item 2">
+                <button type="button" class="btn tirage nav-item nav-item2">
                     <a class="nav-link nav-link2" href="/tirage">Nouveau Tirage</a>
                 </button>
             </div> 
