--- a/src/app/nouveau-tirage/nouveau-tirage.component.css
+++ b/src/app/nouveau-tirage/nouveau-tirage.component.css
@@ -18,7 +18,7 @@ select {
     background-color: #FBFBFB !important;
     border: 1px solid rgba(0, 0, 0, 0.71);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    margin-bottom: 500px !important;
+    margin-bottom: 80px !important;
 }
 
 label {
@@ -55,4 +55,20 @@ label {
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: #101a47 !important;
     --bs-gradient: none;
+}
+
+@media screen and (max-width: 991px) {
+    label {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 24px;
+        letter-spacing: 0.15em;
+        color: #000000;
+    }
+    /* .form1 {
+        margin-bottom: 150px !important;
+    } */
+    
 }
