--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 html { height: 100%; }
-body { margin: 2px; }
+body { margin: 0px 15px 0px 15px; }
 h2 {
     font-family: 'Inter';
     font-style: normal;
