--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -11,9 +11,10 @@ table {
 margin-left: 5%;
 margin-right: 30%;
 padding-right: 0%;
+margin:0px;
 }
 td{
-    
+
     font-family: Roboto;
     font-size: 20px;
 }
@@ -28,4 +29,3 @@ td{
     background-image: linear-gradient(to right top, #87d16b, #00c794, #00b7ba, #00a2cf, #0089cb, #017cba, #016fa9, #006398, #005f80, #1b5867, #305053, #3d4645);
     box-shadow: 2px 3px 2px #87d16b;
 }
-  
