ajout de model et service

--- a/src/app/nouveau-tirage/nouveau-tirage.component.html
+++ b/src/app/nouveau-tirage/nouveau-tirage.component.html
@@ -5,11 +5,11 @@
     <h2 class="mt-4">STATISTIQUE</h2>
     <hr>
 </div>
-<form  class=" form1 p-3 mt-5 mb-5  rounded">
+<form  class=" form1 p-3 mt-5 mb-5 w-70  rounded">
     <div class="container">
         <div class="row m-3 ml-2 mr-2">
             <div class="col-4"><label for="libelleTirage"> LIBELLE TIRAGE </label></div>
-            <div class="col-8"><input type="text" name="libellel" [(ngModel)]="libelleliste" class="form-control"
+            <div class="col-8"><input type="text" name="libellel" [(ngModel)]="libelletirage" class="form-control"
                     id="libelleTirage">
             </div>
         </div>
