--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -29,7 +29,7 @@
           <!-- Name Column -->
           <ng-container matColumnDef="libellel">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Liste des libelle</th>
-            <td  mat-cell *matCellDef="let element"> {{element.libellel}} </td>
+            <td  mat-cell *matCellDef="let element" [routerLink]="url" > <button class="button1">{{element.libellel}}</button>  </td>
           </ng-container>
 
           <!-- Weight Column -->
