--- a/src/app/liste-details/liste-details.component.html
+++ b/src/app/liste-details/liste-details.component.html
@@ -1,44 +1,45 @@
-
 <div class="container-fluid">
 
-    <h2 class="mt-4">LIBELE LISTE</h2>
-    <hr>
+  <h2 class="mt-4">LIBELE LISTE</h2>
+  <hr>
 </div>
 
 
- <div class="mat-elevation-z8 mt-2 posit">
-    <table mat-table [dataSource]="dataSource">
-   
-      <!-- Position Column -->
-       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> Libelle Tirage </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container> 
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Date du tirage </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container> 
-  
-      <!-- Weight Column -->
-       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Nombre de postulant tirer </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container> 
-  
-      <!-- Symbol Column -->
+<div class="mat-elevation-z8 mt-2 posit">
+  <table mat-table [dataSource]="dataSource">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> Libelle Tirage</th>
+      <td mat-cell *matCellDef="let element"> {{element.libellel}}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Date du tirage</th>
+      <td mat-cell *matCellDef="let element"> {{element.datel}}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Nombre de postulant tirer</th>
+      <td mat-cell *matCellDef="let element"> {{element.nbredemande}}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element" routerLink="/tirage-details"> {{element.symbol}} </td>
-      </ng-container> 
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons 
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div> 
+      <th mat-header-cell *matHeaderCellDef> Action</th>
+      <td mat-cell *matCellDef="let element">
+        <button class="button" routerLink="/tirage-details">view</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
