--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,10 +6,10 @@
         <div class="logoFont">
             <a class="navbar-brand Logo" href="#">Free Tirage</a>
         </div>
-        
+
 
         <!-- Toggle button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler toogle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,7 +18,7 @@
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Left links -->
-           
+
             <!-- Left links -->
             <!-- <ul class="navbar-nav ms-auto">
                 <li class="nav-item accueil">
@@ -30,13 +30,13 @@
             </ul> -->
 
              <div class=" navbar-nav ms-auto d-flex align-items-center">
-                <button type="button" class="btn accueil nav-item nav-item1">
-                    <a class="nav-link nav-link2 active" href="/accueil">Accueil</a>
+                <button type="button" class="btn btn-outline-success accueil nav-item nav-item1">
+                    <a class="nav-link nav-link2 active" routerLink="/accueil" >Accueil</a>
                 </button>
-                <button type="button" class="btn tirage nav-item nav-item2">
-                    <a class="nav-link nav-link2" href="/tirage">Nouveau Tirage</a>
+                <button type="button" class="btn btn-outline-success tirage nav-item nav-item2">
+                    <a class="nav-link nav-link2" routerLink="/tirage">Nouveau Tirage</a>
                 </button>
-            </div> 
+            </div>
         </div>
         <!-- Collapsible wrapper -->
     </div>
