--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -10,7 +10,13 @@
 
 <div class="container-fluid">
 
-  <h2 class="mt-4">STATISTIQUE</h2>
+  <div class="row">
+    <div class="col-auto me-auto"><h2 class="mt-4">Dashboard</h2></div>
+    <div class="col-auto"><input type="text" value="" class="mt-4 inputCherche">
+      <button type="submit" class="inputChercheButton"><i class="bi bi-search"></i></button></div>
+  </div>
+
+
   <hr>
 </div>
 
@@ -29,20 +35,20 @@
           <!-- Name Column -->
           <ng-container matColumnDef="libellel">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Liste des libelle</th>
-            <td  mat-cell *matCellDef="let element" [routerLink]="url" > <button class="button1">{{element.libellel}}</button>  </td>
+            <td  mat-cell *matCellDef="let element"  > <a class="lien" [routerLink]="[url,element.libellel]">{{element.libellel}}</a></td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="datel">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Nombre de Tirage Par Liste</th>
-            <td mat-cell *matCellDef="let element"> 8</td>
+            <td mat-cell *matCellDef="let element" > 9 </td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Action</th>
             <td mat-cell *matCellDef="let element">
-              <button class="button">view</button>
+              <img src="../../assets/research-paper.png" class="button" height="25" alt="image montrant le button de recherche">
             </td>
           </ng-container>
 
@@ -50,30 +56,30 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-        <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
           aria-label="Select page of periodic elements">
-        </mat-paginator> -->
+        </mat-paginator>
       </div>
     </div>
     <div class="col">
       <div class="jumbotron">
-        <div class="row w-100 ms-auto">
+        <div class="row w-100">
 
-          <div class="col">
-            <div class="card shadow border-danger mx-sm-1 p-3 border border-5" style="height: 100% ;">
+          <div class="col m-2">
+            <div class="card shadow border-primary mx-sm-1 p-3 border border-5" style="height: 100% ;">
               <div class="card border-danger  text-danger p-3 my-card"><img src="../../assets/le-total.png" height="20"
                                                                             alt="image montrant le nombre total de liste">
               </div>
               <div class="text-danger text-center mt-3">
-                <h4>nombre total de liste</h4>
+                <h4>Nombre Total de Tirage</h4>
               </div>
               <div class="text-danger text-center mt-2">
                 <h1>346</h1>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card shadow border-warning border border-5 mx-sm-1 p-3" style="height: 100% ;">
+          <div class="col m-2">
+            <div class="card shadow border-danger border border-5 mx-sm-1 p-3" style="height: 100% ;">
               <div class="card border-warning shadow text-warning p-3 my-card"><img src="../../assets/totalement.png"
                                                                                     height="20"
                                                                                     alt="image montrant le nombre de liste tiré"
@@ -86,8 +92,22 @@
               </div>
             </div>
           </div>
+          <div class="col m-2">
+            <div class="card shadow border-primary mx-sm-1 p-3 border border-5" style="height: 100% ;">
+              <div class="card border-danger  text-danger p-3 my-card"><img src="../../assets/le-total.png" height="20"
+                                                                            alt="image montrant le nombre total de liste">
+              </div>
+              <div class="text-danger text-center mt-3">
+                <h4>nombre total de liste</h4>
+              </div>
+              <div class="text-danger text-center mt-2">
+                <h1>346</h1>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
