--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,59 +1,13 @@
-<footer class="footer text-left  text-white" style="background-color: #f1f1f1;">
+<footer class="footer text-left  " style="background-color: #f1f1f1;">
     <!-- Grid container -->
     <div class="container pt-4">
       <!-- Section: Social media -->
       <section class="mb-2">
-        <!-- Facebook -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-facebook"></i></a>
-   -->
-        <!-- Twitter -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-twitter"></i></a> -->
-  
-        <!-- Google -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-google"></i></a> -->
-  
-        <!-- Instagram -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-instagram"></i></a>
-   -->
-        <!-- Linkedin -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-linkedin"></i></a> -->
-        <!-- Github -->
-        <!-- <a
-          class="btn btn-link btn-floating btn-lg text-dark m-1"
-          href="#!"
-          role="button"
-          data-mdb-ripple-color="dark"
-          ><i class="bi bi-github"></i></a> -->
       </section>
       <!-- Section: Social media -->
     </div>
     <!-- Grid container -->
-  
+
     <!-- Copyright -->
     <div class=" div p-3" style="background-color: #001427;">
       © 2021-2022 Copyright:
