--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -45,15 +45,26 @@ nav {
     }
 
 }
-
+.toogle{
+  background-color: #F5F5F5 !important;
+  border-radius: 5px;
+  box-shadow: inset -4px -2px 4px rgba(0, 0, 0, 0.25);
+}
+.toogle:hover{
+  background-color: darkblue !important;
+  border-radius: 5px;
+  box-shadow: inset -4px -2px 4px rgba(0, 0, 0, 0.25);
+}
+span:hover{
+  color: #FFFFFF !important;
+}
 
 .nav-item {
-    background-color: aliceblue;
+    background-color: #F5F5F5;
     margin-right: 25px;
     width: 190px;
     height: 50px;
     border-radius: 10px;
-
     box-shadow: inset -4px -2px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -63,13 +74,12 @@ nav {
     font-weight: 60O;
     font-size: 20px;
     line-height: 22px;
-
     color: #000000;
 
-    
+
 }
 .accueil:hover {
-    background-color: #0f1945 !important;
+    background-color: darkblue !important;
     margin-right: 25px;
     width: 190px;
     height: 50px;
@@ -79,7 +89,7 @@ nav {
 }
 
 .tirage:hover {
-    background-color: #0f1945 !important;
+    background-color: darkblue !important;
     margin-right: 25px;
     width: 190px;
     height: 50px;
@@ -94,18 +104,17 @@ nav {
     color: #ffffff;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 990px) {
     .nav-link{
         font-size: 25px;
         letter-spacing: 3px;
 
     }
-    
+
     .accueil{
         padding-bottom: 50px;
     }
     .nav-item {
-        background-color: aliceblue;
         margin-right: 15px;
         margin-top: 5%;
         width: 90%;
@@ -113,7 +122,7 @@ nav {
         border-radius: 10px;
     }
     .accueil:hover {
-        background-color: #0f1945 !important;
+        background-color: darkblue !important;
         margin-right: 15px;
         margin-top: 5%;
         width: 90%;
@@ -121,9 +130,9 @@ nav {
         border-radius: 10px;
         box-shadow: inset -4px -2px 4px rgb(0 0 0 / 25%);
     }
-    
+
     .tirage:hover {
-        background-color: #0f1945 !important;
+        background-color: darkblue !important;
         margin-right: 15px;
         margin-top: 5%;
         width: 90%;
