--- a/src/app/nouveau-tirage/nouveau-tirage.component.css
+++ b/src/app/nouveau-tirage/nouveau-tirage.component.css
@@ -19,6 +19,7 @@ select {
     border: 1px solid rgba(0, 0, 0, 0.71);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     margin-bottom: 80px !important;
+
 }
 
 label {
@@ -31,7 +32,16 @@ label {
 
     color: #000000;
 }
+.form-label{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 0.15em;
 
+  color: #000000;
+}
 
 
 .btn-outline-success {
@@ -39,7 +49,22 @@ label {
     box-shadow: inset 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
 }
-
+.btn-outline-success {
+  --bs-btn-color: #212529;
+  --bs-btn-border-color: #212529;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #212529;
+  --bs-btn-hover-border-color: #212529;
+  --bs-btn-focus-shadow-rgb: 25,135,84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #212529;
+  --bs-btn-active-border-color: #212529;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #212529;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
 .btn-outline-success:hover {
     --bs-btn-color: #101a47 !important;
     --bs-btn-border-color: #101a47 !important;
@@ -70,5 +95,5 @@ label {
     /* .form1 {
         margin-bottom: 150px !important;
     } */
-    
+
 }
