--- a/src/app/tirage-details/tirage-details.component.css
+++ b/src/app/tirage-details/tirage-details.component.css
@@ -1,10 +1,43 @@
 table {
-    width: 100%;
-    margin: 10px;
+  width: 100%;
+  margin: 10px;
 
-  }
-  .posit{
-margin-left: 5%;
-margin-right: 30%;
-padding: 0%;
+}
+
+.posit {
+  margin-left: 5%;
+  margin-right: 30%;
+  padding: 0%;
+}
+.row{
+  margin-bottom: 15px !important;
+/*  box-shadow: 0px 2px 2px black;*/
+}
+span{
+
+  margin-right: 10px;
+  font-size: 20px;
+  font-weight: bolder;
+  text-shadow: 3px 0px 2px #001427;
+}
+
+.button1 {
+  background-color: #FFFFFF;
+  border: 4px black solid;
+  box-shadow: 2px 2px 2px darkgray inset;
+  padding: 5px;
+  border-radius: 18px 0px 0px 18px;
+}
+
+.button1:hover {
+  background-color: darkblue !important;
+
+
+  box-shadow: inset 2px 2px 5px #ffffff;
+  color: #FFFFFF;
+}
+.button1:active {
+  background-color: #FFFFFF;
+  border: 0px;
+  box-shadow: 2px 2px 2px darkgray;
 }
