--- a/src/app/tirage-details/tirage-details.component.html
+++ b/src/app/tirage-details/tirage-details.component.html
@@ -2,40 +2,53 @@
 
     <h2 class="mt-4">LIBELE TIRAGE</h2>
     <hr>
+  <div class="row">
+    <div class="col">Date : </div>
+    <div class="col"><span>|</span>Nombre de Postulant Tiré : </div>
+    <div class="col"><span>|</span>Lbelle de la Liste</div>
+  </div>
 </div>
+
  <div class="mat-elevation-z8 mt-2 posit">
-    <table mat-table [dataSource]="dataSource">
-   
+    <table mat-table [dataSource]="dataSource" id="season-tble">
+
       <!-- Position Column -->
-       <ng-container matColumnDef="position">
+       <ng-container matColumnDef="nompt">
         <th mat-header-cell *matHeaderCellDef> Nom </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container> 
-  
+        <td mat-cell *matCellDef="let element"> <a class="lien" >{{element.nompt}}</a> </td>
+      </ng-container>
+
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
+      <ng-container matColumnDef="prenompt">
         <th mat-header-cell *matHeaderCellDef> Prénom </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container> 
-  
+        <td mat-cell class="lien" *matCellDef="let element"> {{element.prenompt}} </td>
+      </ng-container>
+
       <!-- Weight Column -->
-       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container> 
-  
-      <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
+       <ng-container matColumnDef="numeropt">
         <th mat-header-cell *matHeaderCellDef> Numéro </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-      </ng-container> 
-  
+        <td mat-cell class="lien" *matCellDef="let element"> {{element.numeropt}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+    <ng-container matColumnDef="emailpt">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell class="lien" *matCellDef="let element"> {{element.emailpt}} </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-  
+
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons 
+                   showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
-  </div> 
+  </div>
+<div class="container">
+  <button type="submit"  class="button1 mt-3" >retour vers detail liste</button>
+
+  <div class="triangle"></div>
+</div>
+
+
