--- a/src/app/nouveau-tirage/nouveau-tirage.component.html
+++ b/src/app/nouveau-tirage/nouveau-tirage.component.html
@@ -24,7 +24,7 @@
             <div class="col-4"><label for="libelleListe">Libelle Liste</label></div>
             <div class="col-5">
                 <select id="libelleListe" class="form-select mb-3" [(ngModel)]="libelleliste" name="libelleliste">
-                    <option selected *ngFor="let detailliste of detailListe"> {{detailliste.libellel}} </option>
+                    <option *ngFor="let detailliste of detailListe"> {{detailliste.libellel}} </option>
                 </select>
             </div>
             <div class="col-3"> <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
