--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -12,15 +12,15 @@
 
   <div class="row">
     <div class="col-auto me-auto"><h2 class="mt-4">Dashboard</h2></div>
-    <div class="col-auto"><input type="text" value="" class="mt-4 inputCherche">
+    <!--<div class="col-auto"><input type="text" value="" class="mt-4 inputCherche">
       <button type="submit" class="inputChercheButton"><i class="bi bi-search"></i></button></div>
-  </div>
+-->  </div>
 
 
   <hr>
 </div>
 
-<div class=" text-center">
+<div class=" text-center marge">
   <div class="row">
     <div class="col">
       <div class="mat-elevation-z8 ">
@@ -41,13 +41,13 @@
           <!-- Weight Column -->
           <ng-container matColumnDef="datel">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Nombre de Tirage Par Liste</th>
-            <td mat-cell *matCellDef="let element" > 9 </td>
+            <td mat-cell *matCellDef="let element; let i = index"  > {{nombre[i]}} </td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Action</th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" [routerLink]="[url,element.libellel]">
               <img src="../../assets/research-paper.png" class="button" height="25" alt="image montrant le button de recherche">
             </td>
           </ng-container>
@@ -67,19 +67,19 @@
 
           <div class="col m-2">
             <div class="card shadow border-primary mx-sm-1 p-3 border border-5" style="height: 100% ;">
-              <div class="card border-danger  text-danger p-3 my-card"><img src="../../assets/le-total.png" height="20"
+              <div class="card border-primary  text-danger p-3 my-card"><img src="../../assets/le-total.png" height="20"
                                                                             alt="image montrant le nombre total de liste">
               </div>
-              <div class="text-danger text-center mt-3">
+              <div class="text-primary text-center mt-3">
                 <h4>Nombre Total de Tirage</h4>
               </div>
-              <div class="text-danger text-center mt-2">
-                <h1>346</h1>
+              <div class="text-primary text-center mt-2">
+                <h1>{{nombreTotalDeTirage}}</h1>
               </div>
             </div>
           </div>
           <div class="col m-2">
-            <div class="card shadow border-danger border border-5 mx-sm-1 p-3" style="height: 100% ;">
+            <div class="card shadow border-warning border border-5 mx-sm-1 p-3" style="height: 100% ;">
               <div class="card border-warning shadow text-warning p-3 my-card"><img src="../../assets/totalement.png"
                                                                                     height="20"
                                                                                     alt="image montrant le nombre de liste tiré"
@@ -88,20 +88,20 @@
                 <h4>nombre total de liste tiré</h4>
               </div>
               <div class="text-warning text-center mt-2">
-                <h1>346</h1>
+                <h1>{{nombreTotalDeListeTire}}</h1>
               </div>
             </div>
           </div>
           <div class="col m-2">
             <div class="card shadow border-primary mx-sm-1 p-3 border border-5" style="height: 100% ;">
-              <div class="card border-danger  text-danger p-3 my-card"><img src="../../assets/le-total.png" height="20"
+              <div class="card border-primary  text-primary p-3 my-card"><img src="../../assets/le-total.png" height="20"
                                                                             alt="image montrant le nombre total de liste">
               </div>
-              <div class="text-danger text-center mt-3">
+              <div class="text-primary text-center mt-3">
                 <h4>nombre total de liste</h4>
               </div>
-              <div class="text-danger text-center mt-2">
-                <h1>346</h1>
+              <div class="text-primary text-center mt-2">
+                <h1>{{nombreTotalListe}}</h1>
               </div>
             </div>
           </div>
