--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -16,11 +16,14 @@ span{
 }
 .footer{
 
-  position: absolute; bottom: 0; left: 0; right: 0;
+  position: relative; bottom: 0; left: 0; right: 0; top: 5px;
 }
-@media screen and (max-width: 960px) {
+a{
+  color: #FFFFFF !important;
+}
+/*@media screen and (max-width: 960px) {
   .footer{
     position: initial; bottom: 0; left: 0; right: 0;
   }
-}
+}*/
 
