--- a/src/app/liste-details/liste-details.component.html
+++ b/src/app/liste-details/liste-details.component.html
@@ -3,14 +3,17 @@
 
     <h2 class="mt-4">LIBELE LISTE</h2>
     <hr>
+  <div class="row">
+    <div class="col"><span class="titre"> Date :</span> {{dateCreationListe | date}} </div>
+  </div>
 </div>
 
-
- <div class="mat-elevation-z8 mt-2 posit">
+<div class="marge">
+  <div class="mat-elevation-z8 mt-2 posit">
     <table mat-table [dataSource]="dataSource">
 
       <!-- Position Column -->
-       <ng-container matColumnDef="libellel">
+      <ng-container matColumnDef="libellel">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Libelle Tirage </th>
         <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel] > <a class="lien cursor">{{element.libellel}}</a>  </td>
       </ng-container>
@@ -18,20 +21,20 @@
       <!-- Name Column -->
       <ng-container matColumnDef="datet">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Date du tirage </th>
-        <td mat-cell *matCellDef="let element" class="text-center"> {{element.datet}} </td>
+        <td mat-cell *matCellDef="let element" class="text-center"> {{element.datet | date}} </td>
       </ng-container>
 
       <!-- Weight Column -->
-       <ng-container matColumnDef="nbredemande">
+      <ng-container matColumnDef="nbredemande">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Nombre de postulant tirer </th>
         <td mat-cell *matCellDef="let element" class="text-center"> {{element.nbredemande}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
-    <ng-container matColumnDef="Action">
+      <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Action </th>
         <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel]>
-          <img src="../../assets/research-paper.png" class="button" height="25" alt="image montrant le button de recherche">
+          <img src="../../assets/research-paper.png" class="button cursor" height="25" alt="image montrant le button de recherche">
         </td>
       </ng-container>
 
@@ -40,9 +43,13 @@
 
 
     </table>
-   <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                  showFirstLastButtons
-                  aria-label="Select page of periodic elements">
-   </mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons
+                   aria-label="Select page of periodic elements">
+    </mat-paginator>
 
   </div>
+
+    <div class="m-3  retour"><img class="cursor" routerLink="/accueil" width="100" src="../../assets/Group%204.svg" alt="" srcset=""></div>
+  </div>
+
