--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -13,9 +13,10 @@ nav {
     width: 190px;
     height: 55px !important;
     border: 2px #f2f2f2 solid;
-    background-color: #f2f2f2;
+    background-color: #F5F5F5;
     border-radius: 30px;
     padding: 15px;
+    box-shadow: 2px 2px 2px darkgray ,inset 2px 2px 2px darkgray;
 }
 
 .Logo {
