--- a/src/app/tirage-details/tirage-details.component.html
+++ b/src/app/tirage-details/tirage-details.component.html
@@ -1,38 +1,37 @@
 <div class="container-fluid">
-
     <h2 class="mt-4">LIBELE TIRAGE</h2>
     <hr>
-  <div class="row">
-    <div class="col">Date : </div>
-    <div class="col"><span>|</span>Nombre de Postulant Tiré : </div>
-    <div class="col"><span>|</span>Lbelle de la Liste</div>
+  <div class="row" >
+    <div class="col"><span class="titre">Date :</span> {{tirageDetail.datet | date}} </div>
+    <div class="col"><span class="barreLateral">|</span> <span class="titre">Nombre de Postulant Tiré : </span>{{tirageDetail.nbredemande}} </div>
+    <div class="col"><span class="barreLateral">|</span> <span class="titre">Libelle de la Liste : </span>{{libelleListe}} </div>
   </div>
 </div>
-
- <div class="mat-elevation-z8 mt-2 posit">
+<div class="text-center">
+  <div class="mat-elevation-z8 mt-2 posit">
     <table mat-table [dataSource]="dataSource" id="season-tble">
 
       <!-- Position Column -->
-       <ng-container matColumnDef="nompt">
-        <th mat-header-cell *matHeaderCellDef> Nom </th>
+      <ng-container matColumnDef="nompt">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Nom </th>
         <td mat-cell *matCellDef="let element"> <a class="lien" >{{element.nompt}}</a> </td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="prenompt">
-        <th mat-header-cell *matHeaderCellDef> Prénom </th>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Prénom </th>
         <td mat-cell class="lien" *matCellDef="let element"> {{element.prenompt}} </td>
       </ng-container>
 
       <!-- Weight Column -->
-       <ng-container matColumnDef="numeropt">
-        <th mat-header-cell *matHeaderCellDef> Numéro </th>
-        <td mat-cell class="lien" *matCellDef="let element"> {{element.numeropt}} </td>
+      <ng-container matColumnDef="numeropt">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Numéro </th>
+        <td mat-cell class="lien" *matCellDef="let element"> {{element.numeropt}}</td>
       </ng-container>
 
       <!-- Symbol Column -->
-    <ng-container matColumnDef="emailpt">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
+      <ng-container matColumnDef="emailpt">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> Email </th>
         <td mat-cell class="lien" *matCellDef="let element"> {{element.emailpt}} </td>
       </ng-container>
 
@@ -45,10 +44,9 @@
                    aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
-<div class="container">
-  <button type="submit"  class="button1 mt-3" >retour vers detail liste</button>
-
-  <div class="triangle"></div>
 </div>
+
+  <div class="m-3 retour"  [routerLink]="['/liste-details']" ><img class="cursor" width="100" src="../../assets/Group%204.svg" alt="" srcset=""></div>
+
 
 
