--- a/src/app/nouveau-tirage/nouveau-tirage.component.html
+++ b/src/app/nouveau-tirage/nouveau-tirage.component.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row m-3 ml-2 mr-2">
             <div class="col-4"><label for="libelleTirage"> Libelle Tirage </label></div>
-            <div class="col-8"><input type="text" name="libellel" [(ngModel)]="libelletirage" class="form-control"
+            <div class="col-8"><input type="text" name="libelletirage" [(ngModel)]="libelletirage" class="form-control"
                     id="libelleTirage">
             </div>
         </div>
@@ -24,17 +24,17 @@
             <div class="col-4"><label for="libelleListe">Libelle Liste</label></div>
             <div class="col-5">
                 <select id="libelleListe" class="form-select mb-3" [(ngModel)]="libelleliste" name="libelleliste">
-                  <option>-- importer un fichier -- </option>
-                    <option *ngFor="let detailliste of detailListe"> {{detailliste.libellel}} </option>
+                  <option>-- Selectionner un Fichier --</option>
+                    <option *ngFor="let detaillist of detailListe"> {{detaillist.libellel}} </option>
                 </select>
             </div>
-            <div class="col-3"> <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
+            <div class="col-3"> <button type="button" class="btn text-size btn-outline-success" data-bs-toggle="modal"
                     data-bs-target="#AddEtudiant">importer fichier <i class="bi bi-upload"></i></button> </div>
         </div>
 
     </div>
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button type="submit" class="btn btn-lg btn-outline-success" (click)="CreerTirage()"> Effectuer Tirage </button>
+        <button type="submit" class="btn text-size btn-lg btn-outline-success" (click)="CreerTirage()"> Effectuer Tirage </button>
     </div>
 </form>
 
@@ -49,7 +49,7 @@
                             <div class="col-4"> <label for="Listelibelle" class="form-label">LIBELLE LISTE</label>
                             </div>
                             <div class="col-8">
-                                <input required type="text" id="Listelibelle" class="form-control" name="libelleListe"  [(ngModel)]="libelleliste">
+                                <input required type="text" id="Listelibelle" class="form-control" name="libelleList"  [(ngModel)]="libelleliste">
                             </div>
                         </div>
                         <div class="row mb-3">
