--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -48,7 +48,7 @@
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Action</th>
             <td mat-cell *matCellDef="let element" [routerLink]="[url,element.libellel]">
-              <img src="../../assets/research-paper.png" class="button" height="25" alt="image montrant le button de recherche">
+              <img src="../../assets/information.png" class="button" height="25" alt="image montrant le button de recherche">
             </td>
           </ng-container>
 
@@ -56,8 +56,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-          aria-label="Select page of periodic elements">
+         <mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons
+          >
         </mat-paginator>
       </div>
     </div>
