--- a/src/app/liste-details/liste-details.component.html
+++ b/src/app/liste-details/liste-details.component.html
@@ -21,7 +21,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="datet">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Date du tirage </th>
-        <td mat-cell *matCellDef="let element" class="text-center"> {{element.datet | date}} </td>
+        <td mat-cell *matCellDef="let element" class="text-center"> {{element.datet | date:'dd/MM/yyyy'}} </td>
       </ng-container>
 
       <!-- Weight Column -->
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Action </th>
         <td mat-cell *matCellDef="let element" class="text-center" [routerLink]=[url,element.libellel]>
-          <img src="../../assets/research-paper.png" class="button cursor" height="25" alt="image montrant le button de recherche">
+          <img src="../../assets/information.png" class="button cursor" height="25" alt="image montrant le button de recherche">
         </td>
       </ng-container>
 
@@ -43,7 +43,7 @@
 
 
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+    <mat-paginator [pageSizeOptions]="[5]"
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
